style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
    min-height: 100vh;
    background: linear-gradient(lightblue, olive);
    margin: 0;
    padding: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

header div {
    display: flex;
    flex-wrap: wrap;
}

header h1 {
    text-align: center;
}

header img {
    margin: auto;
    min-width: 200px;
    max-width: 300px;
    border-radius: 100px;
    justify-self: center;
}

header nav {
    width: 100%;  
    justify-self: center;
}

ul {
    display: flex;
    gap: 10px;
    list-style: none;
    justify-self: center;
    padding: 0;
}

a {
    text-decoration: none;
    color:rgb(98, 58, 131)
}

a:hover {
    color: blue

}

a:active {
    color: green;
}

span {
    text-decoration: underline;
    color: rgb(144, 169, 238);
}

#about {
    border: 2px solid black;
    border-radius: 5px;
    margin: auto;
    text-align: center;
    width: auto;
}

section h2 {
    text-align: center;
}

#skills-cards {
    display: flex;
    justify-content: center;
    align-content: center ;
    gap: 20px;
    height: auto;
    text-align: center;
}

#skills-cards img{
    max-width: 50%;
    height: auto;
    display: block;
    justify-self: center;
}

#skill-card-1 {    
    width: 100%;
    max-width: 300px;
    min-height: 200px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
}

#skill-card-2 {
    width: 100%;
    max-width: 300px;
    min-height: 200px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
}


#skill-card-3 {
    width: 100%;
    max-width: 300px;
    min-height: 200px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
}

#projects-cards {
    display: flex;
    justify-content: center;
    align-content: center ;
    gap: 20px;
    height: auto;
    text-align: center;
}

#projects-cards a {
    display: block;
    position: relative;
    top: 25px;
}

#project-card-1 {    
    width: 100%;
    max-width: 300px;
    min-height: 200px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
}

#project-card-2 {
    width: 100%;
    max-width: 300px;
    min-height: 200px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
}


#project-card-3 {
    width: 100%;
    max-width: 300px;
    min-height: 200px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
}

div h3 {
    text-align: center;
}

footer {
    text-align: center;
    margin: 25px;
    padding: 2px;
}

